[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mkv-resolution"
version = "0.1.0"
description = "Batch check the resolution of MKV files"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Unknown"}]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Unknown/MkvCheckResolution"

[project.scripts]
mkv-resolution = "mkv_resolution:cli"

[tool.setuptools]
py-modules = ["mkv_resolution"]
